# maigus

./: .gitignore  Cargo.toml  LLM.md  MECHANICS.md  PARSER.md  PLACEHOLDER_WORKFLOW.md  UNIMPLEMENTED.md  build.rs  rebuild-wasm.sh  semantic_false_positives.txt
crates/maigus-cli/: Cargo.toml
crates/maigus-tools/: Cargo.toml
scripts/: generate_baked_registry.py  semantic_false_positives.txt  stream_scryfall_blocks.py
src/: ability.rs  alternative_cast.rs  card.rs  color.rs  combat_state.rs  compiled_text.rs  condition_eval.rs  continuous.rs  cost.rs  decision.rs  dependency.rs  derived_view.rs  effect.rs  event_processor.rs  executor.rs  filter.rs  game_event.rs  game_loop.rs  game_state.rs  grant.rs  grant_registry.rs  ids.rs  lib.rs  main.rs  mana.rs  marker.rs  object.rs  parse_report2.txt  player.rs  prevention.rs  provenance.rs  replacement.rs  replacement_ability_processor.rs  selection.rs  semantic_compare.rs  snapshot.rs  special_actions.rs  static_ability_processor.rs  tag.rs  target.rs  (+6 more)
src/.claude/: settings.local.json
src/cards/: builders.rs  mod.rs  parse_snapshots.rs
src/compiled_text/: merge_passes.rs  normalize_common.rs  normalize_post_pass.rs  oracle_style.rs  render_effects.rs  render_pipeline.rs
src/costs/: cost_effect.rs  counters.rs  discard.rs  effect.rs  energy.rs  exile.rs  life.rs  mana.rs  mill.rs  mod.rs  payer_trait.rs  processing_mode.rs  return_to_hand.rs  reveal.rs  sacrifice.rs  tap.rs  untap.rs
src/decisions/: context.rs  helpers.rs  make_decision.rs  mod.rs  spec.rs
src/effects/: executor_trait.rs  helpers.rs  mod.rs  restrictions.rs
src/events/: cause.rs  context.rs  mod.rs  traits.rs
src/game_loop/: combat_damage.rs  combat_decisions.rs  mod.rs  priority_cast.rs  (+10 more)
tests/: parser_architecture_guards.rs  parser_diagnostics_rule_ids.rs  parser_frontend_regressions.rs  parser_smoke.rs  semantic_mismatch_regressions.rs  undo_action_chain.rs
(+624 files in other folders)
