[package]
name = "maigus"
version = "0.1.0"
edition = "2024"
autobins = false
autotests = false

[workspace]
members = ["crates/maigus-cli", "crates/maigus-tools"]
default-members = ["."]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stacker = "0.1"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
sha2 = { version = "0.10", optional = true }
secp256k1 = { version = "0.30", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"], optional = true }
js-sys = { version = "0.3", optional = true }

[features]
default = ["serialization"]
serialization = ["dep:serde", "dep:serde_json"]
generated-registry = []
engine-integration-tests = []
parser-tests = []
parser-tests-full = ["parser-tests"]
tooling = ["serialization"]
net = ["serialization", "sha2", "secp256k1"]
wasm = [
    "serialization",
    "generated-registry",
    "dep:wasm-bindgen",
    "dep:serde-wasm-bindgen",
    "dep:console_error_panic_hook",
    "dep:getrandom",
    "dep:js-sys",
]

[[test]]
name = "undo_action_chain"
path = "tests/undo_action_chain.rs"

[[test]]
name = "parser_architecture_guards"
path = "tests/parser_architecture_guards.rs"
required-features = ["parser-tests"]

[[test]]
name = "parser_diagnostics_rule_ids"
path = "tests/parser_diagnostics_rule_ids.rs"
required-features = ["parser-tests"]

[[test]]
name = "parser_smoke"
path = "tests/parser_smoke.rs"
required-features = ["parser-tests"]

[[test]]
name = "semantic_mismatch_regressions"
path = "tests/semantic_mismatch_regressions.rs"
required-features = ["parser-tests-full"]
